@@ -2,6 +2,7 @@
 Description=LVM2 metadata daemon
 Documentation=man:lvmetad(8)
 Requires=lvm2-lvmetad.socket
+Before=shutdown.target
 After=lvm2-lvmetad.socket
 DefaultDependencies=no
 Conflicts=shutdown.target
